<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Posfacil</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="did_you_forget_your_password">¿Olvidaste tu contraseña?</string>
    <string name="password">Contraseña</string>
    <string name="email_username">Correo Electrónico / nombre de usuario</string>
    <string name="string_123">••••••••••••</string>
    <string name="hint_user">Usuario</string>
    <string name="welcome">¡Bienvenidx!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_splash_one">Acepte cualquier tipo de pago con el <b>Punto de venta</b> de <b>PagueloFacil.</b></string>
    <string name="text_splash_two">Inicie sesión y <b>venda sus productos</b> en minutos <b>sin compromisos ni tarifas ocultas.</b></string>
    <string name="text_splash_three">Ahora puedes hacer <b>cobros de tu comercio</b> de una forma más <b>fácil.</b></string>
    <string name="step_one_recovery_pass">Te enviaremos un código para reestablecer tu contraseña</string>
    <string name="step_one_title_recovery_pass">Ingresa tu correo</string>
    <string name="string_email">michellem@gmail.com</string>
    <string name="email">Correo</string>
    <string name="btn_recovery_pass">Recuperar contraseña</string>
    <string name="step_two_title_recovery_pass">Verifica tu correo electrónico</string>
    <string name="step_two_recovery_pass">Revisa tu bandeja de entrada e ingresa el código recibido. Hemos enviados el PIN a:</string>
    <string name="tv_resend_code">Reenviar código</string>
    <string name="tv_next">Siguiente</string>
    <string name="step_three_recovery_pass">Tu nueva contraseña debe ser diferente a las contraseñas anteriores.</string>
    <string name="step_three_title_recovery_pass">Crear nueva contraseña</string>
    <string name="new_pass">Contraseña nueva</string>
    <string name="repeat_new_pass">Confirmar contraseña</string>
    <string name="btn_update_pass">Actualizar contraseña</string>
    <string name="last_name">Nombre y apellido</string>
    <string name="username">Nombre de usuario</string>
    <string name="number_phone">Número de teléfono</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menú</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="some_id">$</string>
    <string name="monto_cobrar">Monto a cobrar</string>
    <string name="cobrar">Cobrar</string>
    <string name="menu_transactions">Transacciones</string>
    <string name="menu_reports">Informes</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_support">Soporte</string>
    <string name="importe_cobro">Importe del cobro:</string>
    <string name="default_import">10.00</string>
    <string name="propinas">Propinas</string>
    <string name="impuestos">Impuestos</string>
    <string name="impuesto_default">Impuesto por default (7%)</string>
    <string name="impuesto_sugerido">ITBMS Sugerido (7%)</string>
    <string name="resume_cobro">Resumen del cobro</string>
    <string name="importe_cobrar">Importe a cobrar</string>
    <string name="total">Total</string>
    <string name="tip">Propina</string>
    <string name="metodo_pago">Método de pago</string>
    <string name="recibir_comprobante">¿Desea recibir comprobante?</string>
    <string name="indica_destino_comproban">¿Desea enviar comprobante?</string>
    <string name="example_email_hint">Ej. name@email.com</string>
    <string name="phone">Télefono</string>
    <string name="example_phone_hint">Ej. 64910677</string>
    <string name="seleccione_metodo_pago">Seleccione su método de pago</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="paguelofacil_app">PagueloFacil</string>
    <string name="verificar_cobro">Verificar cobro</string>
    <string name="esperando_tarjeta">Esperando por tarjeta...</string>
    <string name="send_voucher">Comprobante</string>
    <string name="currency">$</string>
    <string name="currency_amount_pattern">$%1$s</string>
    <string name="possitive_amount_pattern">+ %1$s</string>
    <string name="negative_amount_pattern">- %1$s</string>
    <string name="importe_cobrado">Total Cobrado</string>
    <string name="impuesto_receipt_detail">I.T.B.M.S</string>
    <string name="propina">Propina</string>
    <string name="date">Fecha:</string>
    <string name="code_operation">Código de operación:</string>
    <string name="resend_receipt">Reenviar comprobante</string>
    <string name="other_transaction">Realizar otro cobro</string>
    <string name="card_reconocida">Tarjeta reconocida correctamente.</string>
    <string name="visible_card_pattern">**** %1$s</string>
    <string name="aceptar">Aceptar</string>
    <string name="verificando_card">Estamos verificando la tarjeta...</string>
    <string name="cobro_succes">Se ha realizado el cobro exitosamente.</string>
    <string name="recuperar_password">Recuperar contraseña</string>
    <string name="tarjeta_reconocida_correctamente">Tarjeta reconocida correctamente.</string>
    <string name="search_here">Busca aquí</string>
    <string name="id">ID:</string>
    <string name="hoy">Hoy</string>
    <string name="filter">Filtros</string>
    <string name="select_filter">Aplicar filtros</string>
    <string name="transaction_status">Estatus de la transacción</string>
    <string name="success_transaction">Transacciones aprobadas</string>
    <string name="error_transactions">Transacciones declinadas</string>
    <string name="method_pay_filter">Método de pago</string>
    <string name="user_filters">Usuarios</string>
    <string name="card_filter_visa">Visa</string>
    <string name="card_filter_mastercard">Mastercard</string>
    <string name="card_filter_paguelofacil">PagueloFacil App</string>
    <string name="resumen_ventas_hoy">Tu resumen de ventas de hoy</string>
    <string name="cant_transacciones">Cant. transacciones</string>
    <string name="monto_transacciones">Monto de transacciones</string>
    <string name="cant_reembolsos">Cant. reembolsos</string>
    <string name="monto_reembolsos">Monto de reembolsos</string>
    <string name="total_recibir">Total a recibir:</string>
    <string name="metodos_pago">Métodos de pago</string>
    <string name="monto_visa">Monto de Visa</string>
    <string name="monto_mastercard">Monto de Mastercard</string>
    <string name="monto_paguelofacil">Monto de PagueloFacil App</string>
    <string name="transacciones_usuario">Transacciones por usuario</string>
    <string name="user_transaccione">Transacciones:</string>
    <string name="monto">Monto:</string>
    <string name="reporte_x">Reporte X</string>
    <string name="global">Global</string>
    <string name="detalle_ventas_reporte">Ventas:</string>
    <string name="detalle_impuestos_reporte">Impuestos:</string>
    <string name="detalle_propinas_reporte">Propinas:</string>
    <string name="detalle_devoluciones_reporte">Devoluciones:</string>
    <string name="detalle_Total_reporte">Total:</string>
    <string name="detalle_mastercard_reporte">Mastercard:</string>
    <string name="detalle_visa_reporte">Visa:</string>
    <string name="detalle_usuario">Detalles por usuario</string>
    <string name="detalle_operador_reporte">Operador:</string>
    <string name="generar_reporte_x">Generar reporte x</string>
    <string name="realizar_reporte">Realizar Reporte</string>
    <string name="enviar_reporte">Enviar Reporte</string>
    <string name="my_information">Mi información</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="title_support">Si necesitas ayudas puedes comunicarte a través de los siguientes medios.</string>
    <string name="email_support">info@paguelofacil.com</string>
    <string name="phone_support">(+507) 6047 8373</string>
    <string name="web_support">www.paguelofacil.com</string>
    <string name="about_support">Acerca de</string>
    <string name="legal_support">Legal</string>
    <string name="about_version_app">Versión: de la aplicacion:</string>
    <string name="about_version_spoc">Version SPoC:</string>
    <string name="about_app">Aplicación</string>
    <string name="transactions_menu">Transacciones</string>
    <string name="informe">Informe</string>
    <string name="itbms">ITBMS</string>
    <string name="tipo">Tipo</string>
    <string name="id_transaction">ID de transacción</string>
    <string name="estado">Estado</string>
    <string name="detalle_cobro">Detalle del cobro</string>
    <string name="send">Enviar</string>
    <string name="reembolsar">Reembolsar</string>
    <string name="voucher_enviado">Se ha enviado el comprobante con éxito.</string>
    <string name="ventas">Ventas</string>
    <string name="reportes">Reportes</string>
    <string name="se_ha_enviado_el_reporte_z_exitosamente">Se ha enviado el reporte Z exitosamente.</string>
    <string name="title_firma">Para finalizar, regálanos tu firma</string>
    <string name="subtitle_firma">Trata de realizarla lo más parecido a tu documento de identidad.</string>
    <string name="validacion_pago">Validación del pago</string>
    <string name="finalizar">Finalizar</string>
    <string name="menu_cerrar_session">Cerrar Sesión</string>
    <string name="menu_idioma_espanol">Español</string>
    <string name="menu_idioma_ingles">English</string>
    <string name="menu_powered_by">Powered by PagueloFacil</string>
    <string name="importe_base">Importe base</string>
    <string name="importe_reembolsar">Importe a reembolsar</string>
    <string name="tarjeta_reembolsar">Tarjeta a reembolsar</string>
    <string name="motivo_reembolso">Motivo del reembolso</string>
    <string name="confirmar_reembolso">Confirmar reembolso</string>
    <string name="importe_reembolsado">Importe reembolsado</string>
    <string name="motivo">Motivo:</string>
    <string name="volver_transactions">Volver a transacciones</string>
    <string name="escriba_aqui">Escriba aquí</string>
    <string name="reporte_x_generado">Reporte X generado correctamente</string>
    <string name="desea_enviar_correo_corte">Deseas enviar el reporte a:</string>
    <string name="seguro_realizar_corte_z">¿Estás seguro que deseas realizar el reporte Z?</string>
    <string name="advertencia_corte_z">No podrás seguir cobrando hasta el siguiente día.</string>
    <string name="volver">Volver</string>
    <string name="si_aceptar">Sí, aceptar</string>
    <string name="reporte_z_generado">Se ha generado su reporte Z exitosamente.</string>
    <string name="aun_no_genero_el_reporte_z">Aún no genero el reporte Z</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="cancelar_operation">Cancelar operación</string>
    <string name="desea_cancelar_opera">¿Estás seguro que desea cancelar la operación?</string>
    <string name="si_cancelar">Sí, cancelar</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_00">00</string>
    <string name="num_000">000</string>
    <string name="num_back">&#060;</string>
    <string name="num_cancel_str">&#215;</string>
    <string name="num_ok_str">OK</string>
</resources>