<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/group1"
        android:checkableBehavior="single"

        >
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"

            />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transactions"
            android:title="@string/menu_transactions" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reports"
            android:title="@string/menu_reports" />
    </group>

    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
    </group>

    <group
        android:id="@+id/group5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_support"
            android:title="@string/menu_support" />
    </group>

    <group
        android:id="@+id/group6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_off"
            android:title="@string/menu_cerrar_session" />
    </group>

    <group
        android:id="@+id/group7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign"
            android:title="" />
    </group>



</menu>