<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            tools:context=".ui.view.account.fragments.StepOneRecoveryPassFragment">

            <LinearLayout
                android:id="@+id/ln_arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_rigth"
                    >

                </ImageView>

            </LinearLayout>





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/step_one_title_recovery_pass"
                android:fontFamily="@font/encodesans_bold"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_45sdp"
                android:textColor="@color/color_3D444F"

                >


            </TextView>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/step_one_recovery_pass"
                android:fontFamily="@font/encodesans_medium"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/color_515A69"



                >


            </TextView>

            <TextView
                android:id="@+id/tv_password_label"
                style="@style/customTextViewLabelRegistrationStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/encodesans_bold"

                android:text="@string/email" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"

                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:focusable="true"
                    android:id="@+id/et_password"
                    style="@style/customEditTextRegistrationStyle"
                    android:hint="@string/string_email"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="30"
                    android:paddingStart="@dimen/_24sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



                <ImageView
                    android:id="@+id/iv_clear_email"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:src="@drawable/ic_close_circle_black"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/et_password"
                    app:layout_constraintEnd_toEndOf="@+id/et_password"
                    app:layout_constraintTop_toTopOf="@+id/et_password" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:focusable="false"
                    android:id="@+id/btn_send_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:gravity="start"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_24sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:text="@string/btn_recovery_pass"
                    android:textSize="@dimen/_14sdp"
                    app:cornerRadius="@dimen/_10sdp"
                    app:icon="@drawable/ic_arrow_forward_white"
                    app:iconGravity="end"
                    app:iconSize="@dimen/_16sdp" />


            </LinearLayout>
        </LinearLayout>



</layout>
